Formatted Use Case and added new images.

--- a/app/assets/javascripts/benchmark/benchmark.html
+++ b/app/assets/javascripts/benchmark/benchmark.html
@@ -1,6 +1,6 @@
 <div>
 
-    <div class="ui stackable grid container" style="padding-top:14px">
+    <div class="ui stackable grid container" style="padding-top:14px; min-height:600px;">
         <!-- setup the response grids *** LARGE SCREEN-->
         <div class="sixteen wide column"
             ng-class="{'desktop-padding-left': largeScreen}"
