--- a/app/assets/javascripts/benchmark/analysis_result.html
+++ b/app/assets/javascripts/benchmark/analysis_result.html
@@ -50,7 +50,7 @@
 
 
 
-		<div class="eight wide column" style="padding-left:20px; padding-right:20px; background-color:white;">
+		<div class="eight wide column" style="padding-right:20px; background-color:white;">
 			<div class="row" style="padding-top:0.1em;padding-left:5em;;">
 				<h2 class="ui dividing header">
 					Portfolio Energy:
@@ -76,10 +76,10 @@
 			</div>
 		</div>
 
-		<div class="seven wide column" style="padding-left:20px; padding-right:20px; background-color:white;">
+		<div class="eight wide column">
 			<bar data="energySeries" categories="catergories" options="barOptions.energy"></bar>
 		</div>
-		<div class="seven wide column" style="padding-left:20px; padding-right:20px; background-color:white;">
+		<div class="eight wide column">
 			<bar  data="euiSeries" categories="catergories"  options="barOptions.eui"></bar>
 		</div>
 
