--- a/app/assets/javascripts/benchmark/form.html
+++ b/app/assets/javascripts/benchmark/form.html
@@ -52,7 +52,7 @@
                                 <div class="tooltip">
                                     <sup><i class="maalka-blue circle info icon"></i></sup>
                                         <span class="tooltipimage">
-                                            <img src="/assets/images/climate_zones.jpeg" style="position:absolute;left: -10px;z-index:9999;width:700px;height:292px;">
+                                            <img src="/assets/images/cz_map.png" style="position:absolute;left: -10px;z-index:9999;width:700px;height:292px;">
                                         </span>
                                 </div>
 
