added energy and eui diffs

--- a/app/assets/javascripts/benchmark/analysis_result.html
+++ b/app/assets/javascripts/benchmark/analysis_result.html
@@ -77,10 +77,10 @@
 		</div>
 
 		<div class="eight wide column">
-			<bar data="energySeries" categories="catergories" options="barOptions.energy"></bar>
+			<bar data="energySeries" categories="categories" options="barOptions.energy"></bar>
 		</div>
 		<div class="eight wide column">
-			<bar  data="euiSeries" categories="catergories"  options="barOptions.eui"></bar>
+			<bar  data="euiSeries" categories="categories"  options="barOptions.eui"></bar>
 		</div>
 
 
