--- a/app/assets/javascripts/benchmark/analysis_result.html
+++ b/app/assets/javascripts/benchmark/analysis_result.html
@@ -77,7 +77,7 @@
 		</div>
 
 		<div class="eight wide column">
-			<bar data="energySeries" categories="categories" differences="differences.energy" options="barOptions.energy" chart="charts"></bar>
+			<bar data="energySeries" categories="categories" differences="differences.energy" options="barOptions.energy" ></bar>
 		</div>
 		<div class="eight wide column">
 			<bar  data="euiSeries" categories="categories" differences="differences.eui" options="barOptions.eui" chart="charts"></bar>
