Edited pie chart image and scenario tests image.

--- a/app/assets/javascripts/benchmark/usecase_content.html
+++ b/app/assets/javascripts/benchmark/usecase_content.html
@@ -78,7 +78,7 @@
     <div class="ui hidden divider"></div>
 
 
-    <img class="ui huge centered image" src="./assets/images/scenario_tests.png">
+    <img class="ui huge centered image" src="./assets/images/retrofit.svg">
 
     <div class="ui hidden divider"></div>
 
