cleaned up ui, use keys rather then index for api

--- a/app/assets/javascripts/benchmark/analysis_result.html
+++ b/app/assets/javascripts/benchmark/analysis_result.html
@@ -43,12 +43,12 @@
             </div>
         </div>
 
-
 		<div class="seven wide column" style="padding-right:20px; background-color:white;">
 			<div class="row" style="padding-top:0.1em;padding-left:5em;;">
-				<h2 class="ui dividing header">
-					Portfolio Energy:
-					<div>
+				<h2 class="ui hidden divider">
+					<div style="float:left;">
+						Portfolio Energy:
+
 						<span style="font-size:1em">{{portfolioEnergy | number :0 }}</span>
 						<span style="text-transform:none;">MBtus</span>
 					</div>
@@ -60,9 +60,10 @@
 		<div class="one wide column"></div>
 		<div class="six wide column" style="padding-left:20px; padding-right:20px; background-color:white;">
 			<div class="row" style="padding-top:0.1em;padding-left:1.5em;">
-				<h2 class="ui dividing header">
-					Portfolio EUI:
-					<div>
+				<h2 class="ui hidden divider">
+					<div style="float:left;">
+						Portfolio EUI:
+
 						<span style="font-size:1em">{{portfolioEui | number :0 }}</span>
 						<span style="text-transform:none;"> kBtu/ft<sup>2</sup></span>
 					</div>
@@ -70,7 +71,7 @@
 				</h2>
 			</div>
 		</div>
-
+<div class="fourteen wide column"><div style="margin-left:3.9em;margin-right:0.9em;margin-top:0.1em;" class="ui dividing header"></div></div>
 		<div class="seven wide column">
 			<bar data="energySeries" categories="categories" differences="differences.energy" options="barOptions.energy" ></bar>
 		</div>
