Added Tacoma to list of MPP cities in Use Case

--- a/app/assets/javascripts/benchmark/usecase_content.html
+++ b/app/assets/javascripts/benchmark/usecase_content.html
@@ -21,7 +21,7 @@
     </h1>
 
     <p>
-      The MPP team worked with the cities of Providence (RI), Grand Rapids (MI), and Eugene (OR) to develop and refine a process
+      The MPP team worked with the cities of Providence (RI), Grand Rapids (MI), Tacoma (WA), and Eugene (OR) to develop and refine a process
       for data-driven Strategic Energy Management. The cities were chosen because they could offer perspectives into how energy-usage patterns may vary
         across distinct climate zones.</p>
 
